--- a/requirements.txt
+++ b/requirements.txt
@@ -8,8 +8,8 @@ constantly==15.1.0
 cryptography==39.0.0
 daphne==3.0.2
 Django==3.2.16
+django-rest-knox==4.1.0
 djangorestframework==3.12.1
-
 hyperlink==21.0.0
 idna==3.4
 incremental==22.10.0
